examples/failing/ImportModule.purs
-- @shouldFailWith ModuleNotFound
module Main where

import M1
